--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-10-23 14:58+0200\n"
+"PO-Revision-Date: 2012-10-23 20:18+0200\n"
 "Last-Translator: Steve <yorvik.ubunto@gmail.com>\n"
 "Language-Team: English UK en_GB <yorvik.ubunto@gmail.com>\n"
 "Language: en_GB\n"
@@ -772,9 +772,8 @@ msgid "Mingle _files and folders"
 msgstr "Mingle files and folders"
 
 #: ../src/gtk/fm-folder-view.c:200
-#, fuzzy
 msgid "_Ignore name case"
-msgstr "Ignore name case"
+msgstr "_Ignore name case"
 
 #: ../src/gtk/fm-folder-view.c:211
 msgid "By _Name"
