Commit from LXDE Translation Project with Pootle by user Yaron.: 260 of 260 messages translated (0 fuzzy).

--- a/po/he.po
+++ b/po/he.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-08-23 07:01+0200\n"
+"PO-Revision-Date: 2012-10-23 22:31+0200\n"
 "Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <sh.yaron@gmail.com>\n"
 "Language: he\n"
@@ -26,9 +26,8 @@ msgid "<b>File Type To be Opened:</b>"
 msgstr "<b>סוג הקובץ לפתיחה:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Application"
-msgstr "יישום מותקן"
+msgstr "_יישומים מותקנים"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -39,9 +38,8 @@ msgid "_Browse"
 msgstr "_עיון"
 
 #: ../data/ui/app-chooser.glade.h:6
-#, fuzzy
 msgid "_Execute in terminal emulator"
-msgstr "הפעלת הדמיית מסוף"
+msgstr "ה_פעלה בהדמיית מסוף"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -59,14 +57,12 @@ msgstr ""
 "  <b>%U</b>: לייצוג מספר כתובות אחידות"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "_Custom Command Line"
-msgstr "שורת פקודה מותאמת אישית"
+msgstr "_פקודה מותאמת אישית"
 
 #: ../data/ui/app-chooser.glade.h:14
-#, fuzzy
 msgid "_Set selected application as default action of this file type"
-msgstr "הגדרת היישום הנבחר כפעולת בררת המחדל לסוג קובץ זה"
+msgstr "ה_גדרת היישום הנבחר כפעולת בררת המחדל לסוג קובץ זה"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -100,14 +96,12 @@ msgid "with the following file?"
 msgstr "בקבצים הבאים?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File Name:"
-msgstr "שם הקובץ:"
+msgstr "שם ה_קובץ:"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "_Apply this option to all existing files"
-msgstr "יש להחיל אפשרות זו לכל הקבצים הקיימים"
+msgstr "יש לה_חיל אפשרות זו לכל הקבצים הקיימים"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "File Properties"
@@ -143,7 +137,7 @@ msgstr "<b>פתיחה _באמצעות:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "Select the application used to open files of this type "
-msgstr "יש לבחור את היישום המשמש לפתיחת קבצים מסוג זה"
+msgstr "יש לבחור את היישום המשמש לפתיחת קבצים מסוג זה "
 
 #: ../data/ui/file-prop.glade.h:10
 msgid "<b>Target:</b>"
@@ -154,29 +148,24 @@ msgid "_General"
 msgstr "_כללי"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>O_wner:</b>"
-msgstr "<b>בעלים:</b>"
+msgstr "<b>_בעלים:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>G_roup:</b>"
-msgstr "<b>קבוצה:</b>"
+msgstr "<b>_קבוצה:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>_View content:</b>"
-msgstr "<b>צפייה בתוכן</b>"
+msgstr "<b>_צפייה בתוכן</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>C_hange content:</b>"
-msgstr "<b>שינוי התוכן:</b>"
+msgstr "<b>_שינוי התוכן:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>_Execute:</b>"
-msgstr "<b>הפעלה:</b>"
+msgstr "<b>ה_פעלה:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "<b>Special bits:</b>"
@@ -330,7 +319,7 @@ msgstr "הפעלה במ_סוף"
 
 #: ../data/ui/filesearch.glade.h:1
 msgid "Bytes"
-msgstr ""
+msgstr "בתים"
 
 #: ../data/ui/filesearch.glade.h:2 ../src/base/fm-utils.c:88
 msgid "KB"
@@ -346,139 +335,126 @@ msgstr "ג״ב"
 
 #: ../data/ui/filesearch.glade.h:5
 msgid "Choose a date"
-msgstr ""
+msgstr "נא לבחור בתאריך"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
-msgstr ""
+msgstr "נא לבחור תאריך מלוח השנה שלהלן"
 
 #: ../data/ui/filesearch.glade.h:7
-#, fuzzy
 msgid "Search Files"
-msgstr "_סידור הקבצים"
+msgstr "חיפוש קבצים"
 
 #: ../data/ui/filesearch.glade.h:8
-#, fuzzy
 msgid "<b>File _Name Patterns</b>"
-msgstr "<b>סוג הקובץ:</b>"
+msgstr "<b>_תבנית שם קובץ</b>"
 
 #: ../data/ui/filesearch.glade.h:9
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
-msgstr ""
+msgstr "ללא תלות ב_רישיות"
 
 #: ../data/ui/filesearch.glade.h:11
 msgid "_Use regular expression"
-msgstr ""
+msgstr "_שימוש בביטוי רגולרי"
 
 #: ../data/ui/filesearch.glade.h:12
 msgid "<b>Places to Search</b>"
-msgstr ""
+msgstr "<b>מקומות לחיפוש</b>"
 
 #: ../data/ui/filesearch.glade.h:13
 msgid "_Search in sub directories"
-msgstr ""
+msgstr "חיפוש בתיקיות ש_כפופות לזאת"
 
 #: ../data/ui/filesearch.glade.h:14
 msgid "Search _hidden files"
-msgstr ""
+msgstr "חיפוש קבצים _נסתרים"
 
 #: ../data/ui/filesearch.glade.h:15
 msgid "Name/_Location"
-msgstr ""
+msgstr "שם/מי_קום"
 
 #: ../data/ui/filesearch.glade.h:16
-#, fuzzy
 msgid "<b>File Type</b>"
-msgstr "<b>סוג הקובץ:</b>"
+msgstr "<b>סוג הקובץ</b>"
 
 #: ../data/ui/filesearch.glade.h:17
 msgid "Only search for files of following types"
-msgstr ""
+msgstr "יש לחפש קבצים אך ורק מהסוגים הבאים"
 
 #: ../data/ui/filesearch.glade.h:18
-#, fuzzy
 msgid "Te_xt files"
-msgstr "קבצים נמחקים"
+msgstr "קובצי _טקסט"
 
 #: ../data/ui/filesearch.glade.h:19
-#, fuzzy
 msgid "_Image files"
-msgstr "קבצים מועברים לאשפה"
+msgstr "קובצי _תמונה"
 
 #: ../data/ui/filesearch.glade.h:20
-#, fuzzy
 msgid "_Audio files"
-msgstr "_סידור הקבצים"
+msgstr "קובצי _שמע"
 
 #: ../data/ui/filesearch.glade.h:21
-#, fuzzy
 msgid "_Video files"
-msgstr "_סידור הקבצים"
+msgstr "קובצי וי_דאו"
 
 #: ../data/ui/filesearch.glade.h:22
 msgid "_Documents"
-msgstr ""
+msgstr "מ_סמכים"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "File _Type"
-msgstr "לפי סוג ה_קובץ"
+msgstr "סוג _קובץ"
 
 #: ../data/ui/filesearch.glade.h:24
-#, fuzzy
 msgid "<b>File Contain_s</b>"
-msgstr "<b>גודל על הכונן:</b>"
+msgstr "<b>הקובץ מ_כיל</b>"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid "C_ontent"
-msgstr ""
+msgstr "_תוכן"
 
 #: ../data/ui/filesearch.glade.h:26
-#, fuzzy
 msgid "<b>File Size</b>"
-msgstr "<b>סוג הקובץ:</b>"
+msgstr "<b>גודל הקובץ</b>"
 
 #: ../data/ui/filesearch.glade.h:27
 msgid "_Smaller than:"
-msgstr ""
+msgstr "_קטן מ־:"
 
 #: ../data/ui/filesearch.glade.h:28
 msgid "_Bigger than:"
-msgstr ""
+msgstr "_גדול מ־:"
 
 #: ../data/ui/filesearch.glade.h:29
-#, fuzzy
 msgid "<b>Last Modified Time</b>"
-msgstr "<b>שינוי אחרון:</b>"
+msgstr "<b>מועד השינוי האחרון</b>"
 
 #: ../data/ui/filesearch.glade.h:30 ../src/gtk/fm-gtk-file-launcher.c:531
 #: ../src/gtk/fm-gtk-file-launcher.c:538
-#, fuzzy
 msgid "(None)"
-msgstr "ללא"
+msgstr "(אין)"
 
 #: ../data/ui/filesearch.glade.h:31
 msgid "_Earlier than:"
-msgstr ""
+msgstr "_לפני:"
 
 #: ../data/ui/filesearch.glade.h:32
 msgid "L_ater than:"
-msgstr ""
+msgstr "_אחרי:"
 
 #: ../data/ui/filesearch.glade.h:33
-#, fuzzy
 msgid "_Properties"
-msgstr "מאפייני הקובץ"
+msgstr "מא_פיינים"
 
 #: ../src/base/fm-utils.c:80 ../src/base/fm-utils.c:111
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
-msgstr[0] "%u byte"
+msgstr[0] "בית אחד"
 msgstr[1] "%u בתים"
 
 #: ../src/base/fm-utils.c:103
@@ -620,9 +596,8 @@ msgid ""
 msgstr "האם להחל שינוים אלה על כל הקבצים ותת־התיקיות באופן נסוג?"
 
 #: ../src/gtk/fm-file-properties.c:633
-#, fuzzy
 msgid "<b>_Access content:</b>"
-msgstr "<b>גישה לתוכן:</b>"
+msgstr "<b>_גישה לתוכן</b>"
 
 #: ../src/gtk/fm-file-properties.c:748
 msgid "Files of different types"
@@ -641,34 +616,28 @@ msgid "Applications"
 msgstr "יישומים"
 
 #: ../src/gtk/fm-places-view.c:101
-#, fuzzy
 msgid "_Mount Volume"
-msgstr "עיגון כרך"
+msgstr "_עיגון כרך"
 
 #: ../src/gtk/fm-places-view.c:102
-#, fuzzy
 msgid "_Unmount Volume"
-msgstr "ניתוק כרך"
+msgstr "_ניתוק כרך"
 
 #: ../src/gtk/fm-places-view.c:103
-#, fuzzy
 msgid "_Eject Removable Media"
-msgstr "שליפת מדיה נתיקה"
+msgstr "_שליפת מדיה נתיקה"
 
 #: ../src/gtk/fm-places-view.c:116
-#, fuzzy
 msgid "_Rename Bookmark Item"
-msgstr "שינוי שם לפריט סימנייה"
+msgstr "_שינוי שם לפריט סימנייה"
 
 #: ../src/gtk/fm-places-view.c:117
-#, fuzzy
 msgid "Re_move from Bookmark"
-msgstr "הסרה מהסימניות"
+msgstr "ה_סרה מהסימניות"
 
 #: ../src/gtk/fm-places-view.c:129
-#, fuzzy
 msgid "_Empty Trash Can"
-msgstr "פינוי האשפה"
+msgstr "_פינוי האשפה"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:868
@@ -681,22 +650,19 @@ msgstr "הזנת שם חדש:"
 
 #: ../src/gtk/fm-side-pane.c:61
 msgid "_Off"
-msgstr ""
+msgstr "ל_כבות"
 
 #: ../src/gtk/fm-side-pane.c:62
-#, fuzzy
 msgid "_Places"
-msgstr "מיקומים"
+msgstr "_מיקומים"
 
 #: ../src/gtk/fm-side-pane.c:63
-#, fuzzy
 msgid "_Directory Tree"
-msgstr "עץ התיקיות"
+msgstr "_עץ התיקיות"
 
 #: ../src/gtk/fm-side-pane.c:64
-#, fuzzy
 msgid "_Remote"
-msgstr "מרוחק"
+msgstr "מ_רוחק"
 
 #: ../src/gtk/fm-side-pane.c:412
 msgid "Places"
@@ -708,43 +674,36 @@ msgstr "עץ התיקיות"
 
 #: ../src/gtk/fm-file-menu.c:156
 msgid "_Open"
-msgstr ""
+msgstr "_פתיחה"
 
 #: ../src/gtk/fm-file-menu.c:157 ../src/gtk/fm-file-menu.c:158
-#, fuzzy
 msgid "Open _With..."
-msgstr "פתיחה באמצעות..."
+msgstr "פתיחה _באמצעות..."
 
 #: ../src/gtk/fm-file-menu.c:164
-#, fuzzy
 msgid "Create _Symlink"
-msgstr "יצירת קישור סימבולי"
+msgstr "יצירת קישור _סימבולי"
 
 #: ../src/gtk/fm-file-menu.c:165
-#, fuzzy
 msgid "Se_nd To"
-msgstr "שליחה אל"
+msgstr "שליחה _אל"
 
 #: ../src/gtk/fm-file-menu.c:166
-#, fuzzy
 msgid "Co_mpress..."
-msgstr "דחיסה..."
+msgstr "_דחיסה..."
 
 #: ../src/gtk/fm-file-menu.c:167
-#, fuzzy
 msgid "Extract _Here"
-msgstr "חילוץ לכאן"
+msgstr "חילוץ ל_כאן"
 
 #: ../src/gtk/fm-file-menu.c:168
-#, fuzzy
 msgid "E_xtract To..."
-msgstr "חילוץ אל..."
+msgstr "_חילוץ אל..."
 
 #: ../src/gtk/fm-file-menu.c:169 ../src/gtk/fm-folder-view.c:186
 #: ../src/gtk/fm-folder-view.c:187
-#, fuzzy
 msgid "Prop_erties"
-msgstr "מאפייני הקובץ"
+msgstr "מ_אפיינים"
 
 #: ../src/gtk/fm-file-menu.c:521
 msgid "_Restore"
@@ -799,23 +758,20 @@ msgid "Show _Hidden"
 msgstr "הצגת מו_סתרים"
 
 #: ../src/gtk/fm-folder-view.c:197
-#, fuzzy
 msgid "_Only for this folder"
-msgstr "רק עבור תיקייה זו"
+msgstr "_רק עבור תיקייה זו"
 
 #: ../src/gtk/fm-folder-view.c:198
 msgid "Check to remember sort as folder setting rather than global one"
 msgstr "יש לסמן כדי לשמור את אופן סידור התיקייה בשונה מההגדרות הכלליות"
 
 #: ../src/gtk/fm-folder-view.c:199
-#, fuzzy
 msgid "Mingle _files and folders"
-msgstr "ערבוב בין קבצים ותיקיות"
+msgstr "_ערבוב בין קבצים ותיקיות"
 
 #: ../src/gtk/fm-folder-view.c:200
-#, fuzzy
 msgid "_Ignore name case"
-msgstr "התעלמות משינויי אותיות רישיות בשם"
+msgstr "התעלמות מ_שינויי אותיות רישיות בשם"
 
 #: ../src/gtk/fm-folder-view.c:211
 msgid "By _Name"
@@ -918,10 +874,9 @@ msgstr "הקובץ '%s' ניתן להפעלה. האם ברצונך לפהעיל 
 #. show error if no paths are added
 #: ../src/gtk/fm-gtk-file-launcher.c:566
 msgid "No folders are specified."
-msgstr ""
+msgstr "לא צוינו תיקיות."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:605
-#, fuzzy
 msgid "Select a folder"
 msgstr "נא לבחור בתיקייה"
 
@@ -947,23 +902,20 @@ msgid "Size"
 msgstr "גודל"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "ה_רשאות"
+msgstr "הרשאות"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "רק הבעלים"
+msgstr "הבעלים"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "מועד השינוי"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "<b>מיקום:</b>"
+msgstr "מיקום"
 
 #: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
@@ -1151,27 +1103,26 @@ msgstr "תקליטור אופטי"
 #: ../src/vfs/fm-vfs-menu.c:324 ../src/vfs/fm-vfs-menu.c:586
 #: ../src/vfs/fm-vfs-menu.c:618
 msgid "Menu cache error"
-msgstr ""
+msgstr "שגיאת מטמון תפריט"
 
 #. ---- GFile implementation ----
 #: ../src/vfs/fm-vfs-menu.c:381 ../src/vfs/fm-vfs-search.c:896
 msgid "Operation not supported"
-msgstr ""
+msgstr "הפעולה לא נתמכת"
 
 #: ../src/vfs/fm-vfs-menu.c:552
 #, c-format
 msgid "Invalid filename %s"
-msgstr ""
+msgstr "שם הקובץ שגוי %s"
 
 #: ../src/vfs/fm-vfs-menu.c:613
-#, fuzzy
 msgid "Invalid menu directory"
-msgstr "זו אינה תיקייה תקנית"
+msgstr "תיקיית התפריט שגויה"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
 msgid "Search"
-msgstr ""
+msgstr "חיפוש"
 
 #~ msgid "<b>_Owner:</b>"
 #~ msgstr "<b>_בעלים:</b>"
